--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -24,7 +24,7 @@ The Checker Framework comes with checkers for specific types of errors:
   keys in a map (see \chapterpageref{map-key-checker})
 \item
   \ahrefloc{optional-checker}{Optional Checker} for errors in using the
-  \sunjavadoc{java/util/Optional.html}{Optional} type (see
+  \sunjavadoc{java.base/java/util/Optional.html}{Optional} type (see
   \chapterpageref{optional-checker})
 \item
   \ahrefloc{interning-checker}{Interning Checker} for errors in equality
@@ -899,7 +899,7 @@ For example:
   javac -processor nullness,regex MyFile.java
 \end{alltt}
 
-This feature does not apply to Javac \href{https://docs.oracle.com/javase/11/docs/technotes/tools/windows/javac.html#BHCJEIBB}{@argfiles}.
+This feature does not apply to Javac \href{https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#BHCJEIBB}{@argfiles}.
 
 
 \sectionAndLabel{What the checker guarantees}{checker-guarantees}
