--- a/docs/manual/reflection-checker.tex
+++ b/docs/manual/reflection-checker.tex
@@ -7,7 +7,7 @@
 \chapterAndLabel{Reflection resolution}{reflection-resolution}
 
 A call to
-\sunjavadoc{java/lang/reflect/Method.html\#invoke-java.lang.Object-java.lang.Object...-}{Method.invoke}
+\sunjavadoc{java.base/java/lang/reflect/Method.html\#invoke-java.lang.Object-java.lang.Object...-}{Method.invoke}
 might reflectively invoke any method.  That method might place requirements
 on its formal parameters, and it might return any value.  To reflect these
 facts, the annotated JDK contains
