--- a/docs/manual/signature-checker.tex
+++ b/docs/manual/signature-checker.tex
@@ -41,7 +41,7 @@ examples appear in a table below.
 \item[\refqualclass{checker/signature/qual}{ClassGetName}]
 \begin{sloppypar}
   The type representation used by the
-  \sunjavadoc{java/lang/Class.html\#getName--}{\code{Class.getName()}}, \<Class.forName(String)>,
+  \sunjavadoc{java.base/java/lang/Class.html\#getName--}{\code{Class.getName()}}, \<Class.forName(String)>,
   and \<Class.forName(String, boolean, ClassLoader)> methods.  This format
   is:  for any non-array type, the binary name; and for any array type, a
   format like the
@@ -76,7 +76,7 @@ examples appear in a table below.
 
 \item[\refqualclass{checker/signature/qual}{ClassGetSimpleName}]
   The type representation returned by the
-  \sunjavadoc{java/lang/Class.html\#getSimpleName--}{\code{Class.getSimpleName()}}
+  \sunjavadoc{java.base/java/lang/Class.html\#getSimpleName--}{\code{Class.getSimpleName()}}
   method.  This format is not required by any method in the JDK, so you
   will rarely write it in source code.  The string can be empty.  This
   is not the same as the ``simple name'' defined in
