--- a/docs/manual/faq.tex
+++ b/docs/manual/faq.tex
@@ -1316,7 +1316,7 @@ Here are some style guidelines:
 
 Annotations such as \refqualclass{checker/nullness/qual}{NonNull} are
 declared with
-\<\sunjavadocanno{java/lang/annotation/Retention.html}{Retention}(RetentionPolicy.\sunjavadoc{java.base/java/lang/annotation/RetentionPolicy.html\#RUNTIME}{RUNTIME})>.  In other words,
+\<\sunjavadocanno{java.base/java/lang/annotation/Retention.html}{Retention}(RetentionPolicy.\sunjavadoc{java.base/java/lang/annotation/RetentionPolicy.html\#RUNTIME}{RUNTIME})>.  In other words,
 these type annotations are available to tools at run time.  Such run-time
 tools could check the annotations (like an \<assert> statement), type-check
 dynamically-loaded code, check casts and \<instanceof> operations, resolve
