--- a/docs/manual/signature-checker.tex
+++ b/docs/manual/signature-checker.tex
@@ -41,7 +41,7 @@ examples appear in a table below.
 \item[\refqualclass{checker/signature/qual}{ClassGetName}]
 \begin{sloppypar}
   The type representation used by the
-  \sunjavadoc{java.base/java/lang/Class.html\#getName--}{\code{Class.getName()}}, \<Class.forName(String)>,
+  \sunjavadoc{java.base/java/lang/Class.html\#getName()}{\code{Class.getName()}}, \<Class.forName(String)>,
   and \<Class.forName(String, boolean, ClassLoader)> methods.  This format
   is:  for any non-array type, the binary name; and for any array type, a
   format like the
