--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -665,7 +665,7 @@ if an entry could not be found.
 
 \item
   Add annotations to the stub class.  For example, you might annotate
-  the \sunjavadoc{java.base/java/lang/String.html\#intern--}{String.intern()} method as follows:
+  the \sunjavadoc{java.base/java/lang/String.html\#intern()}{String.intern()} method as follows:
 
 \begin{Verbatim}
   @Interned String intern();
