--- a/docs/manual/interning-checker.tex
+++ b/docs/manual/interning-checker.tex
@@ -36,7 +36,7 @@ these types: \<String>, \<Boolean>, \<Byte>, \<Character>, \<Integer>,
 \<Short>.  Every string literal in the program is guaranteed to be interned
 (\href{https://docs.oracle.com/javase/specs/jls/se11/html/jls-3.html#jls-3.10.5}{JLS
   \S3.10.5}), and the
-\sunjavadoc{java.base/java/lang/String.html\#intern--}{String.intern()} method
+\sunjavadoc{java.base/java/lang/String.html\#intern()}{String.intern()} method
 performs interning for strings that are computed at run time.
 The \<valueOf> methods in wrapper classes always (\<Boolean>, \<Byte>) or
 sometimes (\<Character>, \<Integer>, \<Short>) return an interned result
