--- a/docs/manual/i18n-format-checker.tex
+++ b/docs/manual/i18n-format-checker.tex
@@ -182,7 +182,9 @@ means that any value can be supplied as an argument.
 
 \item[\refenum{checker/i18nformatter/qual}{I18nConversionCategory}{DATE}{}]
 is applicable for date, time, and number types. An argument needs to be
-of \sunjavadoc{java.sql/java/sql/Date.html}{Date}, \sunjavadoc{java/sql/Time.html}{Time}, or \sunjavadoc{java.base/java/lang/Number.html}{Number} type or a subclass of them,
+of \sunjavadoc{java.sql/java/sql/Date.html}{Date},
+\sunjavadoc{java.sql/java/sql/Time.html}{Time}, or
+\sunjavadoc{java.base/java/lang/Number.html}{Number} type or a subclass of them,
 including \sunjavadoc{java.sql/java/sql/Timestamp.html}{Timestamp} and the classes
 listed immediately below.
 
