--- a/docs/manual/signature-checker.tex
+++ b/docs/manual/signature-checker.tex
@@ -76,7 +76,7 @@ examples appear in a table below.
 
 \item[\refqualclass{checker/signature/qual}{ClassGetSimpleName}]
   The type representation returned by the
-  \sunjavadoc{java.base/java/lang/Class.html\#getSimpleName--}{\code{Class.getSimpleName()}}
+  \sunjavadoc{java.base/java/lang/Class.html\#getSimpleName()}{\code{Class.getSimpleName()}}
   method.  This format is not required by any method in the JDK, so you
   will rarely write it in source code.  The string can be empty.  This
   is not the same as the ``simple name'' defined in
