--- a/docs/manual/manual-style.tex
+++ b/docs/manual/manual-style.tex
@@ -169,7 +169,7 @@
 % Do not use \url in the body of any macro
 \newcommand{\sunjavadoc}[2]{\href{https://docs.oracle.com/en/java/javase/11/docs/api/#1}{\<#2>}}
 % Like \sunjavadoc, but for annotations and prepends "@".
-\newcommand{\sunjavadocanno}[2]{\href{https://docs.oracle.com/javase/11/docs/api/#1}{\<@#2>}}
+\newcommand{\sunjavadocanno}[2]{\href{https://docs.oracle.com/en/java/javase/11/docs/api/#1}{\<@#2>}}
 % Now, for Java EE (version 7 is the last version):
 \newcommand{\javaeejavadoc}[2]{\href{https://docs.oracle.com/javaee/7/api/#1}{\<#2>}}
 \newcommand{\javaeejavadocanno}[2]{\href{https://docs.oracle.com/javaee/7/api/#1}{\<@#2>}}
