--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -1252,7 +1252,7 @@ and the \<orElseThrow> method.
 The goal of the Optional Checker is to ensure that the program does not
 crash due to use of a non-present Optional value.  Therefore, the receiver
 of
-\sunjavadoc{java.base/java/util/Optional.html#orElseThrow()}{orElseThrow} is annotated as
+\sunjavadoc{java.base/java/util/Optional.html\#orElseThrow()}{orElseThrow} is annotated as
 \ahref{https://checkerframework.org/api/org/checkerframework/checker/optional/qual/Present.html}{\<@Present>},
 and the optional Checker issues a warning if the client calls
 \<orElseThrow> on a \<@MaybePresent> value.
