--- a/docs/manual/optional-checker.tex
+++ b/docs/manual/optional-checker.tex
@@ -94,18 +94,18 @@ Figure~\ref{fig-optional-hierarchy}.
 The Optional Checker guarantees that your code will not throw an exception
 due to use of an absent \<Optional> where a present \<Optional> is needed.
 More specifically, the Optional Checker will issue a warning if you call
-\sunjavadoc{java.base/java/util/Optional.html#get--}{get}
+\sunjavadoc{java.base/java/util/Optional.html\#get--}{get}
 or
-\sunjavadoc{java.base/java/util/Optional.html#orElseThrow-java.util.function.Supplier-}{orElseThrow}
+\sunjavadoc{java.base/java/util/Optional.html\#orElseThrow-java.util.function.Supplier-}{orElseThrow}
 on a \<@MaybePresent Optional> receiver, because each of these methods
 throws an exception if the receiver is an absent
 \<Optional>.
 
 The Optional Checker does not check nullness properties, such as requiring
 that the argument to
-\sunjavadoc{java.base/java/util/Optional.html#of(T)}{of}
+\sunjavadoc{java.base/java/util/Optional.html\#of(T)}{of}
 is non-null or guaranteeing that the result of
-\sunjavadoc{java.base/java/util/Optional.html#get()}{get}
+\sunjavadoc{java.base/java/util/Optional.html\#get()}{get}
 is non-null.  To obtain such a guarantee, run both the Optional Checker and
 the Nullness Checker (\chapterpageref{nullness-checker}).
 
