--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -899,7 +899,7 @@ For example:
   javac -processor nullness,regex MyFile.java
 \end{alltt}
 
-This feature does not apply to Javac \href{https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#BHCJEIBB}{@argfiles}.
+This feature does not apply to Javac \href{https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#commandlineargfile}{@argfiles}.
 
 
 \sectionAndLabel{What the checker guarantees}{checker-guarantees}
