--- a/docs/manual/optional-checker.tex
+++ b/docs/manual/optional-checker.tex
@@ -94,9 +94,10 @@ Figure~\ref{fig-optional-hierarchy}.
 The Optional Checker guarantees that your code will not throw an exception
 due to use of an absent \<Optional> where a present \<Optional> is needed.
 More specifically, the Optional Checker will issue a warning if you call
-\sunjavadoc{java.base/java/util/Optional.html\#get--}{get}
+\sunjavadoc{java.base/java/util/Optional.html\#get()
+}{get}
 or
-\sunjavadoc{java.base/java/util/Optional.html\#orElseThrow-java.util.function.Supplier-}{orElseThrow}
+\sunjavadoc{java.base/java/util/Optional.html\#orElseThrow(java.util.function.Supplier)}{orElseThrow}
 on a \<@MaybePresent Optional> receiver, because each of these methods
 throws an exception if the receiver is an absent
 \<Optional>.
