--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -501,7 +501,7 @@ equivalent to specifying every file in it whose name ends with
 \code{.astub}.  The stub path entries are delimited by
 \<File.pathSeparator> (`\<:>' for Linux and Mac, `\<;>' for Windows).
 
-The \<-Astubs> argument for is for stub files that users create.
+The \<-Astubs> argument is for stub files that users create.
 A checker automatically reads some of its own stub files; see
 Section~\ref{creating-a-checker-annotated-jdk}.
 
