--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -816,7 +816,7 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
       <compilerArgs combine.children="append">
         <!-- location of the annotated JDK, which comes from a Maven dependency -->
         <arg>-Xbootclasspath/p:$\{annotatedJdk\}</arg>
-        <!-- -Awarns turns type-checking warnings into errors. -->
+        <!-- -Awarns turns type-checking errors into warnings. -->
         <!-- <arg>-Awarns</arg> -->
       </compilerArgs>
     </configuration>
