Document how to use the Checker Framework with javac.

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -14,17 +14,18 @@ build system, or from an IDE\@.  You can skip to the appropriate section:
 \item Eclipse (Section~\ref{eclipse})
 \item Gradle (Section~\ref{gradle})
 \item IntelliJ IDEA (Section~\ref{intellij})
-\item javac or command line (Section~\ref{javac-installation})
+\item Command line (Section~\ref{javac-installation})
 \item Lombok (Section~\ref{lombok})
 \item Maven (Section~\ref{maven})
 \item NetBeans (Section~\ref{netbeans})
 \item tIDE (Section~\ref{tide})
+\item Other tools (Section~\ref{javac})
 \end{itemize}
 
 If your build system or IDE is not listed above, you should customize how
 it runs the javac command on your behalf.  See your build system or IDE
 documentation to learn how to
-customize it, adapting the instructions for javac in Section~\ref{javac-installation}.
+customize it, adapting the instructions for javac in Section~\ref{javac}.
 If you make another tool support running a checker, please
 inform us via the
 \href{https://groups.google.com/forum/#!forum/checker-framework-discuss}{mailing
@@ -1003,6 +1004,99 @@ will not appear in the editor.
 tIDE, an open-source Java IDE, supports the Checker Framework.
 You can download it from \myurl{https://sourceforge.net/projects/tide/}.
 \end{sloppypar}
+
+\sectionAndLabel{javac}{javac}
+
+This section explain how to use the Checker Framework with \<javac>.  This is
+useful if you do not wish to use the javac wrapper script described in
+Section~\ref{javac-installation} or to help you adapt your build tool.  This
+section assumes you have downloaded the Checker Framework release zip and set
+the environment variable \<CHECKERFRAMEWORK> to point to the unziped directory.
+You can also get all of the jars mentioned in this section from Maven Central:
+
+\begin{itemize}
+\item \<javac.jar>: \url{https://search.maven.org/artifact/com.google.errorprone/javac/9%2B181-r4173-1/jar}
+\item \<jdk8.jar>: \url{https://search.maven.org/artifact/org.checkerframework/jdk8/2.11.0/jar}
+\item \<checker-qual.jar>: \url{https://search.maven.org/artifact/org.checkerframework/checker-qual/2.11.0/jar}
+\item \<checker.jar>: \url{https://search.maven.org/artifact/org.checkerframework/checker/2.11.0/jar}
+\end{itemize}
+
+\subsectionAndLabel{Java 8}{java8-install}
+
+This sections show what arguments to pass to javac to run the Checker Framework using JDK 8.
+
+\begin{Verbatim}
+javac \
+-J-Xbootclasspath/p:$CHECKERFRAMEWORK/checker/dist/javac.jar \
+-Xbootclasspath/p:$CHECKERFRAMEWORK/checker/dist/jdk8.jar \
+-cp $CHECKERFRAMEWORK/checker/dist/checker-qual.jar \
+-processorpath $CHECKERFRAMEWORK/checker/dist/checker.jar \
+-processor org.checkerframework.checker.nullness.NullnessChecker \
+-source 8 -target 8
+\end{Verbatim}
+
+Below is an explanation of each argument.
+\begin{enumerate}
+\item \<-J-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/javac.jar>: the
+ErrorProne javac.jar, the OpenJDK Java 9 compiler, must be on the JVM
+bootclasspath. The \<-J> indicates that this is a JVM argument rather than a
+compiler argument.
+
+\item \<-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/jdk8.jar>: jdk8.jar
+must be on the bootclasspath of the compiler.  (This is a compiler arguments, so do not add \<-J>.)
+
+\item \<-cp \$CHECKERFRAMEWORK/checker/dist/checker-qual.jar>: checker-qual.jar
+must be on the compilation classpath.
+
+\item \<-processorpath \$CHECKERFRAMEWORK/checker/dist/checker.jar>:
+checker.jar must be on the processor path.
+
+\item \<-processor org.checkerframework.checker.nullness.NullnessChecker>:
+choose which checker to run by passing its fully qualified name as a processor.
+(Note, using this options means that javac will not search for annotation
+processors, but rather run only those specified here.)
+
+\item \<-source 8 -target 8>: Because using the ErrorProne \<javac.jar> turns
+the Java 8 compiler into a Java 9 compiler, these options ensure that the
+source code is Java 8 and that Java 8 bytecode is created.
+
+\end{enumerate}
+
+\subsectionAndLabel{Java 11}{java11-install}
+
+This section shows what arguments to pass to javac to run the Checker Framework using JDK 11.  These
+instructions should work on JDK 9 or newer, but we only test with JDK 11.
+
+For compiling non-modularized code:
+\begin{Verbatim}
+javac \
+-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+-processorpath $CHECKERFRAMEWORK/checker/dist/checker.jar \
+-cp $CHECKERFRAMEWORK/checker/dist/checker-qual.jar \
+-processor org.checkerframework.checker.nullness.NullnessChecker
+\end{Verbatim}
+
+\<-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED>: opens the
+\<jdk.compiler/com.sun.tools.java.comp> package.  This is required because the
+Checker Framework reflectivly accesses this package.  The rest of the arguments
+are explained above.
+
+For compiling a module, first add \<requires
+org.checkerframework.checker.qual;> to your \<module-info.java>.  The Checker
+Framework inserts annotations into bytecode even if none appear in source code,
+so you must do this even if you write no annotations in your code.
+
+\begin{Verbatim}
+javac \
+-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+-processorpath $CHECKERFRAMEWORK/checker/dist/checker.jar \
+--module-path $CHECKERFRAMEWORK/checker/dist/checker-qual.jar \
+-processor org.checkerframework.checker.nullness.NullnessChecker
+\end{Verbatim}
+
+\<checker-qual.jar> must be on the module path rather than the class path, but
+do not put \<checker.jar> on the processor module path as it is not
+modularized.
 
 
 \sectionAndLabel{Type inference tools}{type-inference-varieties}
