Updates for release.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------
 
-Version ??
+Version 2.11.1, October 1, 2019
 
 The manual links to the Object Construction Checker.
+
+Closed issues:
+1635, 2718, 2767.
 
 ---------------------------------------------------------------------------
 
